fix: Ajustes no backend